Add 'New Grid' button to select up to 100 squares per side in the grid

--- a/style.css
+++ b/style.css
@@ -3,16 +3,27 @@
     padding: 0px;
 }
 
+.top-container {
+    text-align: center;
+}
+
+.top-container button {
+    width: 15em;
+    height: 5em;
+    margin: 5em;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(16, auto);
+    width: 960px;
+    margin: auto;
 }
 
 .grid-item {
-    border: 1px solid black;
     aspect-ratio: 1;
 }
 
 .active {
-    background-color: lavender;
+    background-color: black;
 }
