--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    background-color: darkslategray;
 }
 
 .top-container {
@@ -8,9 +9,18 @@
 }
 
 .top-container button {
+    background-color: lightsteelblue;
+    border-radius: 1em;
+    border: darkolivegreen 0.5em solid;
+    font-weight: bold;
+    color: darkslategray;
     width: 15em;
     height: 5em;
     margin: 5em;
+}
+
+.top-container button:hover {
+    transform: scale(1.1);
 }
 
 .grid-container {
@@ -18,9 +28,12 @@
     grid-template-columns: repeat(16, auto);
     width: 960px;
     margin: auto;
+    border: darkolivegreen solid 1em;
+    border-radius: 1em;
 }
 
 .grid-item {
+    background-color: lightsteelblue;
     aspect-ratio: 1;
 }
 
