--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     color: darkslategray;
     width: 15em;
     height: 5em;
-    margin: 5em;
+    margin: 1em;
 }
 
 .top-container button:hover {
@@ -26,7 +26,7 @@
 .grid-container {
     display: grid;
     grid-template-columns: repeat(16, auto);
-    width: 960px;
+    width: 33em;
     margin: auto;
     border: darkolivegreen solid 1em;
     border-radius: 1em;
